--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-hook-form": "^7.62.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.0",
     "zod": "^4.1.5"
